// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearRefinements has a disabled mode 1`] = `
<button
  className="button button--disabled"
  disabled={true}
  onClick={[Function]}
>
  Clear all filters
</button>
`;

exports[`ClearRefinements renders a clickable button 1`] = `
<button
  className="button false"
  disabled={false}
  onClick={[Function]}
>
  Clear all filters
</button>
`;
